Поправила много по мелочи

--- a/catalog.html
+++ b/catalog.html
@@ -71,7 +71,7 @@
             </a>
             <div class="header__user-buttons--style">
               <div class="basket-table">
-                <form>
+                <form action="https://echo.htmlacademy.ru" method="post">
                   <table class="basket-table__content">
                     <tr class="basket-table__product">
                       <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href="" aria-label="Удалить товар"></a></td>
@@ -90,7 +90,7 @@
                   </table>
                   <div class="basket-table--style">
                     <p class="basket-table__product-sum"><b>Итого: 750 руб.</b></p>
-                    <button class="basket-table-button button" type="submit" name="basket-table__order">Оформить заказ</button>
+                    <button class="basket-table-button button" type="submit">Оформить заказ</button>
                   </div>
                 </form>
             </div>
@@ -110,7 +110,7 @@
         <li class="breadcrumbs__item">Сливочное</li>
       </ul>
       <h1 class="main__title">Сливочное мороженое</h1>
-      <form class="form">
+      <form class="form" action="https://echo.htmlacademy.ru" method="get">
         <div class="form-row">
           <div class="form-group">
             <label for="sort_type">Сортировка:</label>
@@ -165,7 +165,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -177,7 +177,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-кофейное с кусочками шоколада</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
             <li class="catalog__item catalog-item">
               <img src="img/ice-cream__3.jpg" width="267" height="267" alt="Фото мороженого">
@@ -187,7 +187,7 @@
                 <span class="catalog-item__weight">/кг</span>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -199,7 +199,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное крем-брюле с карамельной подливкой</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -211,7 +211,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с брусничным джемом</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -223,7 +223,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-черничное с цельными ягодами черники</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -235,7 +235,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-лимонное с карамельной присыпкой</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -247,7 +247,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с шоколадной стружкой</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -259,7 +259,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-ванильное с кусочками шоколада</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -271,7 +271,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочноe с ментоловым сиропом</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -283,7 +283,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с кусочками черного шоколада</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -295,7 +295,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с мятным сиропом</a></h3>
-              <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+              <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
             </li>
           </ul>
       <ul class="pagination">
