--- a/index.html
+++ b/index.html
@@ -101,14 +101,25 @@
         <h1 class="visually-hidden">Интернет-магазин мороженого</h1>
         <div class="carousel">
           <input class="product-1 visually-hidden" type="radio" id="product-1" name="toggle" checked>
-          <input class="product-2 visually-hidden" type="radio" id="product-2" name="toggle">
-          <input class="product-3 visually-hidden" type="radio" id="product-3" name="toggle">
-          <div class="carousel__bg-helper"></div>
-          <div class="carousel__slide carousel__slide--active">
-            <img src="img/carousel__1.png" height="584" alt="Фото мороженки" style="visibility: hidden">
+          <div class="carousel__slide">
+            <img src="img/carousel__1.png" height="584" alt="Фото мороженки">
             <h2>Крем-брюле и пломбир <br>с малиновым джемом</h2>
             <a class="full-basket button" href="">Давайте оба!</a>
           </div>
+          <input class="product-2 visually-hidden" type="radio" id="product-2" name="toggle">
+          <div class="carousel__slide">
+            <img src="img/carousel__2.png" height="584" alt="Фото мороженки">
+            <h2>Шоколадный пломбир и  <br>лимонный сорбет</h2>
+            <a class="full-basket button" href="">Давайте оба!</a>
+          </div>
+          <input class="product-3 visually-hidden" type="radio" id="product-3" name="toggle">
+          <div class="carousel__slide">
+            <img src="img/carousel__3.png" height="584" alt="Фото мороженки">
+            <h2>Пломбир с помадкой и  <br>клубничный щербет</h2>
+            <a class="full-basket button" href="">Давайте оба!</a>
+          </div>
+
+          <div class="carousel__bg-helper"></div>
           <div class="carousel__slider">
             <div class="carousel__slider-buttons">
               <label for="product-1">Первый слайд</label>
@@ -150,7 +161,7 @@
             <h3 class="catalog-item__title">
               <a class="catalog-item__title-link" href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
             </h3>
-            <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+            <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
           </li>
           <li class="catalog__item catalog-item">
             <div>
@@ -164,7 +175,7 @@
             <h3 class="catalog-item__title">
               <a class="catalog-item__title-link" href="">Сливочно-кофейное с кусочками шоколада</a>
             </h3>
-            <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+            <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
           </li>
           <li class="catalog__item catalog-item">
             <div>
@@ -178,7 +189,7 @@
             <h3 class="catalog-item__title">
               <a class="catalog-item__title-link" href="">Сливочно-клубничное с присыпкой из белого шоколада</a>
             </h3>
-            <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+            <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
           </li>
           <li class="catalog__item catalog-item">
             <div>
@@ -192,7 +203,7 @@
             <h3 class="catalog-item__title">
               <a class="catalog-item__title-link" href="">Сливочное крем-брюле с карамельной подливкой</a>
             </h3>
-            <button class="catalog-item__hover-button button">Быстрый просмотр</button>
+            <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
           </li>
         </ul>
     </main>
