Иконка "хит" на главной, ховер стрелочки сортировки в каталоге

--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
         <ul class="catalog">
           <li class="catalog__item catalog-item">
             <div>
+              <div class="catalog__item-popular">
+                <h3 class="visually-hidden">Хит продаж</h3>
+              </div>
               <img src="img/ice-cream__1.jpg" width="267" height="267" alt="Фото мороженого">
               <div class="catalog-item-cost">
                 <span class="catalog-item__price">310</span>
@@ -165,6 +168,9 @@
           </li>
           <li class="catalog__item catalog-item">
             <div>
+              <div class="catalog__item-popular">
+                <h3 class="visually-hidden">Хит продаж</h3>
+              </div>
               <img src="img/ice-cream__2.jpg" width="267" height="267" alt="Фото мороженого">
               <div class="catalog-item-cost">
                 <span class="catalog-item__price">380</span>
@@ -179,6 +185,9 @@
           </li>
           <li class="catalog__item catalog-item">
             <div>
+              <div class="catalog__item-popular">
+                <h3 class="visually-hidden">Хит продаж</h3>
+              </div>
               <img src="img/ice-cream__3.jpg" width="267" height="267" alt="Фото мороженого">
               <div class="catalog-item-cost">
                 <span class="catalog-item__price">355</span>
@@ -193,6 +202,9 @@
           </li>
           <li class="catalog__item catalog-item">
             <div>
+              <div class="catalog__item-popular">
+                <h3 class="visually-hidden">Хит продаж</h3>
+              </div>
               <img src="img/ice-cream__4.jpg" width="267" height="267" alt="Фото мороженого">
               <div class="catalog-item-cost">
                 <span class="catalog-item__price">415</span>
