--- a/catalog.html
+++ b/catalog.html
@@ -126,7 +126,12 @@
           <div class="form-group">
               <label for="cost">Цена: 100 руб. – 500 руб.</label>
               <div class="form-group-style">
-                <input class="form-group-style-range" type="range" name="cost" id="cost" min="100" max="500">
+                <div class="range__min-price">
+                  <input class="form-group-style-range toggle1" type="range" name="cost" id="cost" min="100" max="500">
+                </div>
+                <div class="range__max-price">
+                  <input class="form-group-style-range toggle2" type="range" name="cost" id="cost" min="100" max="500">
+                </div>
               </div>
           </div>
           <div class="form-group">
