--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-  </head>
+    </head>
   <body>
     <header class="header">
       <nav class="header-nav">
@@ -80,18 +80,23 @@
 
 
     <div class="call-back--wrapper">
-        <div class="call-back">
+      <div class="call-back">
+        <div class="call-back__window">
           <form>
             <p class="call-back__text">Мы обязательно вам ответим!</p>
             <label class="visually-hidden" for="username">Введите имя</label>
             <input class="call-back__input" type="text" name="username" id="username" placeholder="Как вас зовут?" required>
             <label class="visually-hidden" for="usermail">Введите электронную почту</label>
             <input class="call-back__input" type="email" name="usermail" id="usermail" placeholder="Ваша почта для ответа?"  required>
-            <textarea class="call-back__textarea" rows="7" placeholder="Напишите что-нибудь..."></textarea>
-            <button class="call-back__button button" type="submit">Отправить</button>
+            <label class="visually-hidden" for="message">Напишите что-нибудь...</label>
+            <textarea class="call-back__textarea" rows="7" name="message" id="message" placeholder="Напишите что-нибудь..."></textarea>
+            <div class="text-align-right">
+              <button class="call-back__button button" type="submit">Отправить</button>
+            </div>
           </form>
         </div>
       </div>
+    </div>
 
 
     <!--  Выше форма обратной связи, реагирует на кнопку "class="address__button"" на главной странице -->
@@ -281,7 +286,7 @@
     </section>
     <section class="map">
       <h4 class="visually-hidden">Как к нам доехать</h4>
-      <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3AXWUbK2nw6gR2-xpv16dDyL_sRWGopB5q&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script>
+      <iframe width="1200px" height="430px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" allowfullscreen=""></iframe>
       <div class="address">
         <p class="address__text">Адрес главного офиса<br>  и офлайн-магазина: </p>
         <p class="address__text address__text--bold address__text--br">ул. Большая Конюшенная<br> 19/8, Санкт-Петербург</p>
