--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!--  Выше форма обратной связи, реагирует на кнопку "class="address__button"" на главной странице -->
 
 
-    <main>
+    <main class="main">
         <h1 class="visually-hidden">Интернет-магазин мороженого</h1>
         <div class="carousel">
           <input class="product-1 visually-hidden" type="radio" id="product-1" name="toggle" checked>
