Перенесла размеры iframe в css

--- a/catalog.html
+++ b/catalog.html
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div class="form-group catalog-cost-range">
-              <label for="cost">Цена: 100 руб. – 500 руб.</label>
+              <label>Цена: 100 руб. – 500 руб.</label>
               <div class="form-group-style">
                   <div class="form-group__range-filter">
                       <div class="form-group__range-controls">
