--- a/catalog.html
+++ b/catalog.html
@@ -114,7 +114,7 @@
         <div class="form-row">
           <div class="form-group catalog-sort">
             <label for="sort_type">Сортировка:</label>
-            <div class="form-group-style">
+            <div class="form-group-style form-group-style--padding">
               <select class="sort_type" name="sort_type" id="sort_type">
                 <option>по популярности</option>
                 <option>сначала недорогие</option>
