Убрала странные символы, которые отображались только в винде

--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
           <input class="product-1 visually-hidden" type="radio" id="product-1" name="toggle" checked>
           <div class="carousel__slide">
             <img src="img/carousel__1.png" height="584" alt="Фото мороженки">
-            <h2>Крем-брюле и пломбир <br>с малиновым джемом</h2>
+            <h2>Крем-брюле и пломбир<br>с малиновым джемом</h2>
             <a class="full-basket button" href="">Давайте оба!</a>
           </div>
           <input class="product-2 visually-hidden" type="radio" id="product-2" name="toggle">
           <div class="carousel__slide">
             <img src="img/carousel__2.png" height="584" alt="Фото мороженки">
-            <h2>Шоколадный пломбир и  <br>лимонный сорбет</h2>
+            <h2>Шоколадный пломбир и<br>лимонный сорбет</h2>
             <a class="full-basket button" href="">Давайте оба!</a>
           </div>
           <input class="product-3 visually-hidden" type="radio" id="product-3" name="toggle">
           <div class="carousel__slide">
             <img src="img/carousel__3.png" height="584" alt="Фото мороженки">
-            <h2>Пломбир с помадкой и  <br>клубничный щербет</h2>
+            <h2>Пломбир с помадкой и<br>клубничный щербет</h2>
             <a class="full-basket button" href="">Давайте оба!</a>
           </div>
 
@@ -139,7 +139,7 @@
             <img src="img/gifts-item__background--berry.jpeg" width="560" height="229" alt="Фон с малинкой">
             <div class="gifts-item__content">
               <h2 class="gifts-item__title">Малинка даром!</h2>
-              <p class="gifts-item__text">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно. </p>
+              <p class="gifts-item__text">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
             </div>
             <a class="gifts-item__link button" href="">Хочу варенье!</a>
             </li>
@@ -147,7 +147,7 @@
             <img src="img/gifts-item__background--choco.jpeg" width="560" height="229" alt="Фон с шоколадкой">
             <div class="gifts-item__content">
               <h2 class="gifts-item__title">Шоколадки даром!</h2>
-              <p class="gifts-item__text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.   </p>
+              <p class="gifts-item__text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно. </p>
             </div>
             <a class="gifts-item__link button" href="">Хочу шоколадки!</a>
             </li>
@@ -288,11 +288,12 @@
       <h4 class="visually-hidden">Как к нам доехать</h4>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" allowfullscreen=""></iframe>
       <div class="address">
-        <p class="address__text">Адрес главного офиса<br>  и офлайн-магазина: </p>
+        <p class="address__text">Адрес главного офиса<br>и офлайн-магазина:</p>
         <p class="address__text address__text--bold address__text--br">ул. Большая Конюшенная<br> 19/8, Санкт-Петербург</p>
         <p class="address__text">Для заказов по телефону:</p>
         <p class="address__text address__text--bold">
-          <a href="tel:88124502525">8 812 450-25-25 </a> </p><br>
+          <a href="tel:88124502525">8 812 450-25-25</a>
+        </p><br>
         <p class="address__text">(с 10 до 20 ежедневно)</p>
         <a class="address__button button" href="">Форма обратной связи</a>
       </div>
